[package]
name = "chessgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_svg = { version = "0.11.0", default-features = false, features = ["2d"] }
chess_lib = { git = "https://github.com/clgustafsson/idapy-chess-lib.git" }
#fork of idapy-chess-lib ^^
